--- a/app/views/layouts/new_admin.html.haml
+++ b/app/views/layouts/new_admin.html.haml
@@ -35,51 +35,16 @@
                 = link_to "Organized", '/rails/mailers/organized_mailer' , role: "button", class: "btn btn-light dropdown-item"
                 = link_to "Admin", '/rails/mailers/admin_mailer' , role: "button", class: "btn btn-light dropdown-item"
                 = link_to "Customer", '/rails/mailers/customer_mailer' , role: "button", class: "btn btn-light dropdown-item"
-        :ruby
-          other_links = [
-                          { title: "Users", path: admin_users_path, match_controller: true },
-                          { title: "Bikes", path: admin_bikes_path, match_controller: true },
-                          { title: "Stolen Bikes", path: admin_stolen_bikes_path, match_controller: true },
-                          { title: "Organizations", path: admin_organizations_path, match_controller: true },
-                          { title: "News", path: admin_news_index_path, match_controller: true },
-                          { title: "POS Integration", path: lightspeed_interface_path, match_controller: false },
-                          { title: "Ambassador Activities", path: admin_ambassador_tasks_path, match_controller: true },
-                          { title: "Completed Ambassador Activities", path: admin_ambassador_task_assignments_path, match_controller: true },
-                          { title: "Theft Alerts", path: admin_theft_alerts_path, match_controller: true },
-                          { title: "Theft Alert Plans", path: admin_theft_alert_plans_path, match_controller: true },
-                          { title: "Payments", path: admin_payments_path, match_controller: true },
-                          { title: "Paid Features", path: admin_paid_features_path, match_controller: true },
-                          { title: "Invoices", path: admin_invoices_path(query: "active", direction: "asc", sort: "subscription_end_at"), match_controller: true },
-                          { title: "Recoveries", path: admin_recoveries_path, match_controller: true },
-                          { title: "Recovery Displays", path: admin_recovery_displays_path, match_controller: true },
-                          { title: "Stolen Twitterbot", path: ENV["STOLEN_TWITTERBOT_URL"].gsub(/bikes\z/, ""), match_controller: false },
-                          { title: "Memberships", path: admin_memberships_path, match_controller: true },
-                          { title: "Manufacturers", path: admin_manufacturers_path, match_controller: true },
-                          { title: "Organization Invitations", path: admin_organization_invitations_path, match_controller: false },
-                          { title: "New Organization Invitation", path: new_admin_organization_invitation_path, match_controller: false },
-                          { title: "TSV Exports", path: admin_tsvs_path, match_controller: false },
-                          { title: "Maintenance", path: admin_maintenance_path, match_controller: false },
-                          { title: "Failed Bikes", path: admin_failed_bikes_path, match_controller: true },
-                          { title: "Component Types", path: admin_ctypes_path, match_controller: true },
-                          { title: "Graphs", path: admin_graphs_path, match_controller: true },
-                          { title: "Edit Paints", path: admin_paints_path, match_controller: true },
-                          { title: "Feedback & Messages", path: admin_feedbacks_path, match_controller: true },
-                          { title: "Tweets", path: admin_tweets_path, match_controller: true },
-                          { title: "Stickers", path: admin_bike_codes_path, match_controller: true },
-                          { title: "Exports", path: admin_exports_path, match_controller: true },
-                          { title: "Bulk Imports", path: admin_bulk_imports_path, match_controller: true },
-                          { title: "Partial Bikes", path: admin_partial_bikes_path, match_controller: true },
-                          { title: "Duplicate Bikes", path: duplicates_admin_bikes_path, match_controller: false },
-                          { title: "Feature Flags", path: admin_feature_flags_path, match_controller: false },
-                          { title: "Exit Admin", path: root_path, match_controller: false },
-                        ]
-          other_link_active = other_links.detect { |l| current_page_active?(l[:path], l[:match_controller]) }
-          other_prompt = other_link_active.present? ? "Viewing #{other_link_active[:title]}" : "Admin navigation"
+
+        - if admin_nav_display_view_all
+          = link_to admin_nav_select_link_active[:path], class: "nav-link text-muted em" do
+            all
+            .d-none.d-md-inline-block
+              = admin_nav_select_link_active[:title]
         .fancy-select.unfancy.no-restore-on-backspace
-          = select(:admin, :other_navigation, options_for_select(other_links.map { |l| [l[:title], l[:path]] }), { prompt: other_prompt }, { class: "form-control" })
+          = select(:admin, :other_navigation, options_for_select(admin_nav_select_links.map { |l| [l[:title], l[:path]] }), { prompt: admin_nav_select_prompt }, { class: "form-control" })
 
         = link_to "Exit Admin", root_path, class: "btn btn-outline-secondary ml-auto less-strong d-none d-lg-inline-block"
-
     = render 'layouts/revised_messages'
 
     %section#admin-content
