--- a/app/views/admin/recovery_displays/index.html.haml
+++ b/app/views/admin/recovery_displays/index.html.haml
@@ -1,12 +1,16 @@
+.admin-subnav
+  .col-md-6
+    %h1
+      Recovery displays
 
-%h1
-  Recoveries to display
-  = link_to "New recovery display", new_admin_recovery_display_url, class: "btn btn-success float-right"
+  .col-md-6
+    %ul
+      %li.nav-item
+        = link_to "New recovery display", new_admin_recovery_display_url, class: "nav-link btn btn-outline-success"
+      %li.nav-item
+        = link_to "bust cache", admin_recovery_display_path("bust_cache"), class: "nav-link less-strong"
 %p
   #{pluralize(RecoveryDisplay.count, "recovery display")}
-  %span.float-right
-    = link_to "bust cache", admin_recovery_display_path("bust_cache"), class: "less-strong"
-
 
 = paginate @recovery_displays, views_prefix: "admin"
 .full-screen-table
@@ -30,10 +34,11 @@
       - @recovery_displays.each do |recovery_display|
         %tr
           %td
-            %a.convertTime{ href: edit_admin_recovery_display_url(recovery_display) }
-              = l recovery_display.date_recovered, format: :convert_time
-            %small.text-right.less-strong
-              = recovery_display.bike && recovery_display.bike.id
+            .less-strong-hold
+              %a.convertTime{ href: edit_admin_recovery_display_url(recovery_display) }
+                = l recovery_display.date_recovered, format: :convert_time
+              %small.less-strong-right
+                = recovery_display.bike && recovery_display.bike.id
           %td
             %small.convertTime
               = l recovery_display.updated_at, format: :convert_time
