--- a/app/views/admin/recovery_displays/new.html.haml
+++ b/app/views/admin/recovery_displays/new.html.haml
@@ -1,9 +1,7 @@
+= render partial: "/admin/bikes/bike", locals: { bike: @bike, target: "show", stolen_record: @stolen_record, display_recovery: true }
 
-%h1
-  New recovery
-- if @bike.present?
-  %p
-    for #{link_to @bike.title_string.strip, edit_admin_bike_url(@bike)}, #{link_to "recovery", edit_admin_recovery_url(@recovery_display.stolen_record_id)}
-
+.admin-subnav.midpage-subnav
+  .col-12
+    %h1 New Recovery Display
 
 = render partial: "form"
