--- a/app/views/admin/stolen_bikes/index.html.haml
+++ b/app/views/admin/stolen_bikes/index.html.haml
@@ -29,7 +29,7 @@
 
 = paginate @bikes, views_prefix: "admin"
 .full-screen-table
-  %table.table.table-striped.table-bordered
+  %table.table.table-striped.table-bordered.table-sm
     %thead.thead-light
       %th
         Stolen record created&nbsp;<small class="convertTimezone"></small>
