--- a/app/views/admin/stolen_bikes/edit.html.haml
+++ b/app/views/admin/stolen_bikes/edit.html.haml
@@ -37,7 +37,7 @@
         %li
           The #{@bike.type} will be posted to any pertinent blogs.
         %li
-          It can NOT be effectively reversed\n
+          It can NOT be effectively reversed
     .col-sm-6.text-center
       = link_to "Approve listing", approve_admin_stolen_bike_url(@bike), method: :post, class: "btn btn-lg btn-success"
 
