additional approval stuff

--- a/app/views/admin/recovery_displays/_form.html.haml
+++ b/app/views/admin/recovery_displays/_form.html.haml
@@ -8,12 +8,12 @@
       %li
         Make sure there is a picture! Either click "Use first image" (if there is a bike that has an image), or find an image for the bike elsewhere and upload it
       %li
-        Edit the "Body" field and
+        Edit the "Body" field and:
         %ul
           %li
             Make sure the text is under the character count (there's a counter below that updates as you type)
           %li
-            Remove any references to race
+            Remove any references to race, class, homelessness, etc. of the thief
           %li
             Fix typos and grammar
 %hr.mb-4
