--- a/app/views/admin/recovery_displays/_form.html.haml
+++ b/app/views/admin/recovery_displays/_form.html.haml
@@ -1,73 +1,93 @@
+.row.mt-4.mb-4
+  .col-md-10.col-lg-8.ml-auto.mr-auto
+    %h4
+      Recovery display approval process
+    %ol
+      %li
+        Remove last name from "Quote by" field
+      %li
+        Make sure there is a picture! Either click "Use first image" (if there is a bike that has an image), or find an image for the bike elsewhere and upload it
+      %li
+        Edit the "Body" field and:
+        %ul
+          %li
+            Make sure the text is under the character count (there's a counter below that updates as you type)
+          %li
+            Remove any references to race, class, homelessness, etc. of the thief
+          %li
+            Fix typos and grammar
+%hr.mb-4
+
 = form_for [:admin, @recovery_display] do |f|
   - if @recovery_display.errors.any?
     = render partial: "/shared/errors", locals: { name: "Recovery Display", obj: @recovery_display }
   - if @recovery_display.stolen_record_id.present?
     = f.hidden_field :stolen_record_id, value: @recovery_display.stolen_record_id
-  .card.mb-4.bg-light
-    .card-body
-      .row
-        .col-lg-6
-          .form-group
-            = f.label :quote_by
-            = f.text_field :quote_by, class: "form-control"
-        .col-lg-6
-          .form-group
-            = f.label :link
-            = f.text_field :link, class: "form-control"
-      .row
-        .col-lg-6
-          .form-group
-            = f.label :date_recovered
-            - f.object.date_recovered ||= Time.current
-            = f.datetime_local_field :date_recovered, max: Time.current + 1.day, step: 60, required: true, class: 'form-control dateInputUpdateZone', "data-initialtime" => l(f.object.date_recovered, format: :convert_time)
-        .col-lg-6
-          - if @bike.present?
-            .form-group
+  .row
+    .col-lg-6
+      .form-group
+        = f.label :quote_by
+        = f.text_field :quote_by, class: "form-control"
+    .col-lg-6
+      .form-group
+        = f.label :link
+        = f.text_field :link, class: "form-control"
+  .row
+    .col-lg-6
+      .form-group
+        = f.label :date_recovered
+        - f.object.date_recovered ||= Time.current
+        = f.datetime_local_field :date_recovered, max: Time.current + 1.day, step: 60, required: true, class: 'form-control dateInputUpdateZone', "data-initialtime" => l(f.object.date_recovered, format: :convert_time)
+
+    - if @bike.present?
+      .col-lg-6
+        .form-group
+          %label
+            Bike url
+          %input.form-control.less-strong.w-100{ type: "text", value: bike_url(@recovery_display.bike), disabled: true }
+  .row
+    .col-lg-6
+      .form-group
+        = f.label :body
+        = f.text_area :quote, placeholder: 'Quote about recovery', rows: 4, class: "form-control", id: "characterCounter"
+      %p.text-info.text-right{ style: "margin-top: -10px; font-size: 150%;" }
+        %span#characterTotal
+
+    .col-lg-6
+      #recovery-photo-upload-input
+        .form-group.mt-4
+        = f.label :image, "Recovery photo"
+        - if @recovery_display.image?
+          = image_tag(@recovery_display.image_url(:thumb))
+        - elsif @recovery_display.id.present?
+          %p.text-danger
+            No picture!
+        .input-group.mb-3
+          .custom-file
+            = f.label :image, "Choose file", class: "custom-file-label"
+            = f.file_field :image, class: "custom-file-input"
+      .form-group.avatar-upload
+        .avatar-img
+          - if @bike.present? && @recovery_display.image.blank?
+            - if @bike.public_images.present? || @bike.stock_photo_url.present?
+              - if @bike.public_images.present?
+                - text = "has image"
+                - url = @bike.public_images.first.image_url
+              - else
+                - text = "has stock image"
+                - url = @bike.stock_photo_url
               %label
-                Bike url
-              %input.less-strong.w-100{ type: 'text', value: bike_url(@recovery_display.bike) }
-      .row
-        .col-lg-6
-          .form-group
-            = f.label :body
-            = f.text_area :quote, placeholder: 'Quote about recovery', rows: 4, class: "form-control", id: "characterCounter"
-          %p#characterTotal
-
-        .col-lg-6
-          #recovery-photo-upload-input
-            .form-group.mt-4
-            = f.label :image, "Recovery photo"
-            - if @recovery_display.image?
-              = image_tag(@recovery_display.image_url(:thumb))
+                #{link_to "Bike", bike_url(@bike), target: "_blank"} #{text}
+              %a.btn.btn-outline-success#use_image_for_display{ href: '#', data: {url: url}}
+                Use first image
             - else
-              %p
-                No picture!
-            .input-group.mb-3
-              .custom-file
-                = f.label :image, "Choose file", class: "custom-file-label"
-                = f.file_field :image, class: "custom-file-input"
-          .form-group.avatar-upload
-            .avatar-img
-              - if @bike.present? && @recovery_display.image.blank?
-                - if @bike.public_images.present? || @bike.stock_photo_url.present?
-                  - if @bike.public_images.present?
-                    - text = "has image"
-                    - url = @bike.public_images.first.image_url
-                  - else
-                    - text = "has stock image"
-                    - url = @bike.stock_photo_url
-                  %label
-                    #{link_to "Bike", bike_url(@bike), target: "_blank"} #{text}
-                  %a.btn.btn-success#use_image_for_display{ href: '#', data: {url: url}}
-                    Use first image
-                - else
-                  Bike has no image
-      - if @recovery_display.image.present?
-        .row.mb-4.mt-4
-          .col-lg-6
-            .form-check
-              = f.check_box :remove_image, class: "form-check-input"
-              = f.label :remove_image, class: "form-check-label"
-
-      = f.hidden_field :remote_image_url
-      = f.submit 'Save', class: 'btn btn-success float-right mt-4'
+              Bike has no image
+  - if @recovery_display.image.present?
+    .row.mb-4.mt-4
+      .col-lg-6
+        .form-check
+          = f.check_box :remove_image, class: "form-check-input"
+          = f.label :remove_image, class: "form-check-label"
+          = f.hidden_field :remote_image_url
+  .mt-4.mb-4.text-right
+    = f.submit "Save", class: 'btn btn-success'
