--- a/app/views/admin/stolen_bikes/edit.html.haml
+++ b/app/views/admin/stolen_bikes/edit.html.haml
@@ -1,34 +1,88 @@
 = render partial: "admin/bikes/bike", locals: { bike: @bike, target: "show", stolen_record: @stolen_record }
-- unless @stolen_record.present?
+
+.row.mt-2.mb-4
+  - @bike.public_images.each_with_index do |img, index|
+    - next if index == 1
+    .col-3.mb-2.col-lg-2
+      = image_tag img.image_url(:small), class: "ml-auto mr-auto", style: "display: block; max-width: 150px; height: auto;"
+
+%hr
+- if @stolen_record.blank?
   %h1.mt-4
     Stolen record not created yet.
   %p
-    Wait a minute or two and it will be here!
+    If this bike has just been marked stolen, wait a minute or two and it will be here!
 
-  %hr.mt-4
-  = link_to "Standard edit page", edit_admin_bike_url(@bike)
-  - @bike.public_images.each do |img|
-    .pull-left
-      = image_tag img.image_url(:small)
+- elsif @bike.present? && !@current_stolen_record
+  %h2.text-warning
+    This Stolen record is not the current stolen record for the Bike!
+  %p
+    Either you're viewing a recovered bike or there is a new stolen record.
+  %h4
+    = link_to "View the current stolen record", edit_admin_stolen_bike_url(@bike.id)
+  %p.text-danger.mt-4
+    You Probably don't want to do anything on this page
 
-- unless @stolen_record&.approved
+- elsif @stolen_record.present? && !@stolen_record.approved
   .row.mt-4.mb-4
-    .col-sm-6
-      %p.mb-0
-        %span.text-warning
-          %strong
-            Warning!
+    .col-md-6
+      %h4
+        Stolen Record approval process
+      %ol
+        %li
+          Delete anything that's egregiously wrong (like Motorcycles), or spam
+        %li
+          #{link_to "Edit Bike", admin_bike_path(@bike)} if there is a 40 word descriptions in the "Bike Model" field and move it to the description field
+        %li
+          #{link_to "Edit Bike", admin_bike_path(@bike)} & check "Serial missing" if:
+          %ul
+            %li
+              The serial is "idk" or other similar stupid shit (rather than <span class="less-strong">absent</span>)
+            %li
+              the serials is only a frame numbers like EN14761 or EN14****
+        %li
+          #{link_to "Edit Bike", admin_bike_path(@bike, anchor: "edit-stolen-record")} and fix the stolen city name if:
+          %ul
+            %li
+              City is abbreviated: e.g. "SLC" and not "Salt Lake City"
+            %li
+              The recurring new-bikes bug where city names like "San Francisco" need fixed because they just say "San"
+
+        %li
+          Determine if bike is <em>Special</em> - here are some reasons/actions taken
+          %ul
+            %li
+              Super distinct, in a city we are strong in? We tweet highlight it, even though its getting auto tweeted
+            %li
+              A real distinct cargo bike in PDX? I can post to "PDX Cargo Bike Gang"
+            %li
+              Is it a bike dressed up as a unicorn in New Orleans? post to "Stolen bikes nola"
+            %li
+              Is the person using a photo from instagram? Connect with them on IG
+            %li
+              Is the person well-known/VIP? we email them / tweet them etc
+            %li
+              Did the person say "I have security video" but didn't include it? Email them for it.
+            %li
+              Did the person say "I have photos of the thief"  - same
+          %em.less-strong
+            If you believe the bike is <em>Special</em>, and don't know what to do, ping Bryan with it
+
+    .col-md-6
+      .alert.alert-info
+        %h4
           Approving will:
-      %ul.mt-0
-        %li
-          Send out a tweet
-        %li
-          The #{@bike.type} will be posted to any pertinent blogs.
-        %li
-          It can NOT be effectively reversed\n
-    .col-sm-6.text-center
-      = link_to "Approve listing", approve_admin_stolen_bike_url(@bike), method: :post, class: "btn btn-lg btn-success"
-  %hr
+        %ul.mt-0
+          %li
+            Send out a tweet
+          %li
+            The #{@bike.type} will be posted to any pertinent blogs.
+          %li
+            It <strong class="em">can NOT</strong> be effectively reversed
+        .mt-4.text-center
+          = link_to "Approve listing", approve_admin_stolen_bike_url(@bike), method: :post, class: "btn btn-lg btn-success"
+
+%hr.mt-4.mb-4
 
 - if @customer_contact.present?
   = form_for [:admin, @customer_contact] do |f|
