--- a/app/views/admin/bikes/_table.html.haml
+++ b/app/views/admin/bikes/_table.html.haml
@@ -9,9 +9,9 @@
       %thead.thead-light.sortable
         %th
           - if render_sortable
-            = sortable "id", "Registered"
+            = sortable "id", "Added"
           - else
-            Registered
+            Added
         %th.d-none.d-md-table-cell
           - if render_sortable
             = sortable "owner_email", "Sent to"
