--- a/app/views/admin/bikes/duplicates.html.haml
+++ b/app/views/admin/bikes/duplicates.html.haml
@@ -14,7 +14,7 @@
     .col-lg-6
       = link_to "ignore #{duplicate_group.segment}", ignore_duplicate_toggle_admin_bikes_path(id: duplicate_group.id), method: 'PUT', class: 'float-right less-strong'
 
-  = render partial: "/admin/bikes/admin_bikes_table", locals: { bikes: duplicate_group.bikes, no_show_header: true, show_serial: true }
+  = render partial: "/admin/bikes/table", locals: { bikes: duplicate_group.bikes, no_show_header: true, show_serial: true }
 
 
 = paginate @duplicate_groups, views_prefix: "admin"
