--- a/app/views/admin/dashboard/index.html.haml
+++ b/app/views/admin/dashboard/index.html.haml
@@ -5,7 +5,7 @@
   Recent
   = link_to "Bikes", admin_bikes_url
 
-= render partial: "/admin/bikes/admin_bikes_table", locals: { bikes: @bikes }
+= render partial: "/admin/bikes/table", locals: { bikes: @bikes }
 
 
 .row.justify-content-end
