--- a/app/views/admin/dashboard/maintenance.html.haml
+++ b/app/views/admin/dashboard/maintenance.html.haml
@@ -6,7 +6,7 @@
     Recent example bikes
     = link_to "Delete example bikes", admin_destroy_example_bikes_url
   - if @bikes.any?
-    = render partial: "/admin/bikes/admin_bikes_table"
+    = render partial: "/admin/bikes/table"
     .row.justify-content-end
       .col-auto
         %p
