--- a/app/views/admin/paints/edit.html.haml
+++ b/app/views/admin/paints/edit.html.haml
@@ -38,7 +38,7 @@
 %hr
 
 - if @bikes.present?
-  = render partial: "/admin/bikes/admin_bikes_table"
+  = render partial: "/admin/bikes/table"
 
 - else
   = link_to "Delete!", admin_paint_url(@paint), method: :delete, class: "btn btn-danger"
