--- a/app/views/admin/bikes/edit.html.haml
+++ b/app/views/admin/bikes/edit.html.haml
@@ -137,13 +137,15 @@
     .col-md-4.col-lg-3
       .form-group
         = f.label :owner_email
-        = f.text_field :owner_email, :required =>true, class: "form-control"
+        = f.text_field :owner_email, required: true, class: "form-control"
 
-  .row.mb-4
-    .col-4
-      = submit_tag "Update the bike", class: "btn btn-success"
-    .col-8.text-right
+  .row.mt-4
+    .col-12.text-center
+      = submit_tag "Update the bike", class: "btn btn-success btn-lg"
+  .row.mt-4.mb-4
+    .col-6
       = link_to "Bike messages", admin_feedbacks_path(search_bike_id: @bike.to_param), class: "btn btn-outline-primary"
+    .col-6.text-right
       = link_to "Delete bike", admin_bike_url(@bike), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger ml-4"
 
   - if @bike.stolen and @bike.current_stolen_record.present?
