fix recovery display js

--- a/app/views/admin/recovery_displays/_form.html.haml
+++ b/app/views/admin/recovery_displays/_form.html.haml
@@ -1,4 +1,4 @@
-.row.mt-4.mb-4
+.row.mt-4.mb-4#recovery-display-form
   .col-md-10.col-lg-8.ml-auto.mr-auto
     %h4
       Recovery display approval process
